load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_module",
    "ocaml_signature",
)

package(default_visibility = ["//visibility:public"])

DEPS = []
DEPS_OPAM = []

################################################################
ocaml_archive(
    name   = "btauto",
    opts   = [
        "-rectypes",
        # "-linkall",
    ],
    modules = [
        ":_Refl_btauto",
        ":_G_btauto",
        ":_Btauto_plugin"
    ]
)

#############
ocaml_module(
    name   = "_Btauto_plugin",
    struct = "btauto_plugin.ml",
    opts   = [
        "-rectypes",
        "-no-alias-deps",
        "-w", "-49", # no cmi file was found in path for module
    ],
)

SUBMODS = [
        "Refl_btauto",
        "G_btauto",
]

SUBMODULES = [
    'echo "module {m} = {m}" >> $@'.format( m = SUBMOD )
    for SUBMOD in SUBMODS
]

########
genrule(
    name = "gen_plugin_resolver",
    outs = [
        "btauto_plugin.ml"
    ],
    cmd = "\n".join(SUBMODULES),
)

#############
ocaml_module(
    name    = "_G_btauto",
    struct  = "g_btauto.ml",
    opts = [
        "-rectypes",
        "-w", "-27" # unused variable
    ],
    deps = [
        "//plugins/ltac",
        ":_Refl_btauto"
    ],
)

###########################
COQPP = "//coqpp:coqpp_main"

########
genrule(
    name = "gen_g_btauto",
    tools = [COQPP],
    srcs = [
        "g_btauto.mlg"
    ],
    outs = [
        "g_btauto.ml"
    ],
    cmd = "\n".join([
        "$(location {tool}) $(location g_btauto.mlg)".format( tool = COQPP ),
        "cp plugins/btauto/g_btauto.ml $(location g_btauto.ml);"
    ]),
)

#############
ocaml_module(
    name    = "_Refl_btauto",
    struct  = "refl_btauto.ml",
    sig     = "_Refl_btauto.cmi",
    opts = [
        "-rectypes",
        "-w", "-27" # unused variable
    ],
    deps = [
        "//library:_Coqlib",
        "//printing:_Printer",
        "//tactics:_Redexpr",
        "//tactics:_Tacticals",
        "//tactics:_Tactics",
    ],
)

######
ocaml_signature(
    name = "_Refl_btauto.cmi",
    src  = "refl_btauto.mli",
    opts = ["-rectypes"],
    deps = [
        "//engine:_Proofview"
    ],
)
